kustomize/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume
  labels:
    app: resume
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume
  template:
    metadata:
      labels:
        app: resume
    spec:
      containers:
      - name: resume
        image: fabioluciano/fabioluciano.github.io:2.4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "10Mi"
            cpu: "2m"
          limits:
            memory: "50Mi"
            cpu: "5m"
