kustomize/service.yml
apiVersion: v1
kind: Service
metadata:
  name: resume
spec:
  selector:
    app: resume
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
